# squirrel-maze

./: .coveragerc  .gitignore  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  learn-github-actions.yml
squirrel_maze/: _entrypoints.py  _main.py  _pyinquirer_ex.py  main.py  sm.py
squirrel_maze/data/: db.json
squirrel_maze/resources/: action.py  actor.py  advantages.py  combat.py  db_helpers.py  helpers.py  location.py  menus.py  npc.py  weapon.py
test/: action.py
test/unit/: action.py  helpers.py  test_action.py  test_actor.py  test_combat.py  test_db_helpers.py  test_helpers.py  test_menus.py  test_npc.py  test_weapon.py
test/unit/test_files/: db.json  db.json.bk
