[tool.poetry]
name = "squirrel-maze"
version = "0.1.0"
description = ""
authors = ["Ryan Hill <rthill91@gmail.com>"]

[tool.poetry.scripts]
squirrel_maze = "squirrel_maze._entrypoints:main"

[tool.poetry.dependencies]
python = "^3.7"
art = "^4.2"
tabulate = "^0.8.6"
PyInquirer = "^1.0"
tinydb = "^3.15"
pyinquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mock = "^3.0"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
