[tool.poetry]
name = "squirrel-maze"
version = "0.1.0"
description = ""
authors = ["Steven Powell <princeodd@gmail.com>"]

[tool.poetry.scripts]
squirrel_maze = "squirrel_maze._entrypoints:main"

[tool.poetry.dependencies]
python = "^3.8"
art = "^4.2"
PyInquirer = "^1.0"
tinydb = "^3.15"
pyinquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mock = "^3.0"
pytest-cov = "^2.8"
mypy = "^0.902"
black = "^21.6b0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
